1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Don't use Sun JDK wrapper script.  Add info
	for proc, threads type, and LD_LIBRARY_PATH variable name.

1999-06-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4: Ignore libffi on Sparc and ix86.

1999-06-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4 (USEBUILTINAVCALL): Add an automake conditional.

1999-06-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4 (md_FIND_FFI): If external libffi or ffcall are not
	found, don't abort; instead, set FFILIB as avcall.lo
	and FFIINCLUDES, FFILDFLAGS to local avcall build directory.
	Handle `no' for --with-ffidir and with-ffcalldir.

1999-06-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4 (md_FIND_BLT): Add BLT24 as a libname.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acdll.m4: Add USEDLL automake conditional.

1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acargp.m4: Substitute ARGP_H to argp.h if it isn't found.

1999-06-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acargp.m4: Check for argp.h.

1999-06-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Quote JAVALIBS for Kaffe setting of KAFFELIBRARYPATH.

1999-06-02    <mgd@HELEN>

	* acjdk.m4: For Kaffe, get DOS-style path of ${jdkdir}/lib/kaffe,
	since that is needed to find the .la files.

1999-06-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Remove jdkdosdir; will use cygpath -w.

1999-05-31  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (USEDOSCLASSPATH): New substitution.  This distinguishes
	between native Windows and Cygwin applications.
	In Kaffe case, look in ${jdkdir}/bin/kaffe for KAFFE_CLASSDIR.
	Convert it to windows path if host_os is cygwin.

1999-05-31    <mgd@HELEN>

	* acjdk.m4 (JAVALIBS): Different settings for Solaris, Digital Unix,
	HPUX, and WebObjects.

1999-05-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
