@@ -15,9 +15,9 @@ EXPORT_EXTERNDEF="__attribute__ ((dllexport))"
 IMPORT_EXTERN="extern __attribute__ ((dllimport))"
 AC_MSG_RESULT(using dllimport and dllexport)
 ])
-AC_SUBST(EXPORT_EXTERN)
-AC_SUBST(EXPORT_EXTERNDEF)
-AC_SUBST(IMPORT_EXTERN)
+AC_DEFINE(EXPORT_EXTERN,$EXPORT_EXTERN)
+AC_DEFINE(EXPORT_EXTERNDEF,$EXPORT_EXTERNDEF)
+AC_DEFINE(IMPORT_EXTERN,$IMPORT_EXTERN)
 AC_PATH_PROG(DLLWRAP, dllwrap, missing)
 AC_SUBST(USEDLL)
 AM_CONDITIONAL(USEDLL, test $USEDLL = yes)
